# darling-corecrypto

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md
cc/include/corecrypto/: cc.h
cc/src/: cc.c
